Fixed username jumping. Added notifications when username called.

--- a/assets/sass/partials/_page.sass
+++ b/assets/sass/partials/_page.sass
@@ -125,6 +125,7 @@ header
 
 		article
 			width: 100%
+			min-width: 300px
 			@include clear
 
 			img
